# medit

./: .gitignore  CMakeLists.txt  Makefile  Medit_Combined.txt  README.md  build.sh  chunkless_sample.wav.bak  info_sample.wav.bak  medit
include/: ME.hpp  ME_Array.h  ME_Core.hpp  ME_File.h  ME_File.hpp  ME_List.h  ME_Metadata.h  ME_Parser.hpp  ME_Print.h
src/: #Medit.c#  .#Medit.c  ME_Array.c  ME_Core.cpp  ME_File.c  ME_File.cpp  ME_List.c  ME_Metadata.c  ME_Parser.cpp  ME_Print.c  Medit.c  main.c  main.cpp
